--- a/GiftCards/src/main/resources/templates/pages/cities.html
+++ b/GiftCards/src/main/resources/templates/pages/cities.html
@@ -31,7 +31,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="state : ${statesList}"
-									th:text="${state.cc_state_id}" />
+									th:text="${state.cc_state_name}" />
 							</select>
 						</div>
 					</div>
@@ -85,7 +85,7 @@
 
 				<tbody>
 					<tr data-th-each="subcat : ${citiesList}">
-						<td th:text="${subcat.id}"></td>
+						<td th:text="${subcat.cc_city_id}"></td>
 						<td th:text="${subcat.cc_city_name}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
