--- a/GiftCards/src/main/resources/templates/pages/countries.html
+++ b/GiftCards/src/main/resources/templates/pages/countries.html
@@ -54,7 +54,7 @@
 
 				<tbody>
 					<tr data-th-each="country : ${countriesList}">
-						<td th:text="${country.id}"></td>
+						<td th:text="${country.country_id}"></td>
 						<td th:text="${country.cc_country_name}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
