--- a/GiftCards/src/main/resources/templates/homepage.html
+++ b/GiftCards/src/main/resources/templates/homepage.html
@@ -55,10 +55,10 @@
 	<!-- header -->
 	<div class="header" id="home1">
 		<div class="container">
-			<div class="w3l_logo pull-left">
+			<div class="pull-left">
 
-				<img src="img/logo.jpg" height="150" width="200"
-					class=" img-responsive" alt="Logo" />
+				<img src="img/logo.jpg" width="250" class=" img-responsive"
+					alt="Logo" />
 
 
 				<!-- <h1>
@@ -71,9 +71,9 @@
 				<div>
 					<small><i class="fa fa-map-marker location-icon"></i> India</small>
 
-					<select class="forms-inps">
-						<option>Select Location</option>
-						<option>Telangana</option>
+					<select class="form-control search-slt">
+						<option data-th-each="cat : ${statesList}"
+							th:text="${cat.cc_state_name}" />
 					</select>
 
 				</div>
@@ -102,9 +102,11 @@
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 					<ul class="nav navbar-nav">
 						<li><a href="#" class="act">Home</a></li>
-						<li><a href="#">About Us</a></li>
-						<!-- Mega Menu -->
-						<li class="dropdown"><a href="#" class="dropdown-toggle"
+						<li><a href="#topcoupons" class="scroll">Top Coupons</a></li>
+						<li><a href="#popularstores" class="scroll">Popular
+								Stores</a></li>
+						<li><a href="#aboutus" class="scroll">About Us</a></li>
+						<!-- <li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown">Stores <b class="caret"></b></a>
 							<ul class="dropdown-menu multi-column columns-3">
 								<div class="row">
@@ -145,10 +147,9 @@
 									</div>
 									<div class="clearfix"></div>
 								</div>
-							</ul></li>
-						<li><a href="#">Categories</a></li>
+							</ul></li> -->
 
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="#contactus" class="scroll">Contact Us</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -159,6 +160,58 @@
 	<div>&nbsp;</div>
 	<!-- banner -->
 	<div class="container">
+		<div>
+			<section>
+				<div>
+					<form action="#" method="post" novalidate="novalidate">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="row">
+
+									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+										<select class="form-control search-slt"
+											id="exampleFormControlSelect1">
+											<option>Select Location</option>
+											<option data-th-each="cat : ${citiesList}"
+												th:text="${cat.cc_city_name}" />
+										</select>
+									</div>
+
+
+
+									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+										<select class="form-control search-slt"
+											id="exampleFormControlSelect1">
+											<option>Select Categry</option>
+											<option data-th-each="cat : ${categoriesList}"
+												th:text="${cat.cc_catg_name}" />
+										</select>
+									</div>
+
+									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+										<select class="form-control search-slt"
+											id="exampleFormControlSelect1">
+											<option>Select Sub Categry</option>
+											<option data-th-each="cat : ${subcategoriesList}"
+												th:text="${cat.cc_subcat_name}" />
+										</select>
+									</div>
+
+
+									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+										<button type="button" class="btn btn-danger wrn-btn"
+											onclick="#">Search</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</section>
+
+			<div>&nbsp;</div>
+		</div>
+
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
@@ -195,168 +248,29 @@
 			</a>
 		</div>
 	</div>
-	<div>&nbsp;</div>
-	<div class="container">
-		<div class="searchoption">
-			<h3 class="text-center">Coolcoupons</h3>
-			<div>&nbsp;</div>
-			<div class="col-md-3">
-				<select class="form-control">
-					<option>Select Location</option>
-					<option>Hyderabad</option>
-				</select>
-			</div>
-
-			<div class="col-md-3">
-				<select class="form-control">
-					<option>Any Category</option>
-					<option>links01</option>
-				</select>
-			</div>
-
-			<div class="col-md-3">
-				<select class="form-control">
-					<option>Any Store</option>
-					<option>Hyderabad</option>
-				</select>
-			</div>
-
-			<div class="col-md-3">
-				<input type="text" name="search" class="form-control"
-					placeholder="Search" />
-			</div>
-
-			<div class="col-md-12 text-center" style="margin-top: 30px;">
-				<button class="btn search-btn">
-					<i class="fa fa-search"></i> Go..
-				</button>
-				<button class="btn clear-btn">
-					<i class="fa fa-trash-o"></i> Clear
-				</button>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- <div class="banner">
-		<div class="container">
-			<div class="filter-container">
-				<h3 class="text-center">Coolcoupons</h3>
-
-				<div class="col-md-3">
-					<select class="form-control">
-						<option>Select Location</option>
-						<option>Hyderabad</option>
-					</select>
-				</div>
-
-				<div class="col-md-3">
-					<select class="form-control">
-						<option>Any Category</option>
-						<option>links01</option>
-					</select>
-				</div>
-
-				<div class="col-md-3">
-					<select class="form-control">
-						<option>Any Store</option>
-						<option>Hyderabad</option>
-					</select>
-				</div>
-
-				<div class="col-md-3">
-					<input type="text" name="search" class="form-control"
-						placeholder="Search" />
-				</div>
-
-				<div class="col-md-12 text-center" style="margin-top: 30px;">
-					<button class="btn search-btn">
-						<i class="fa fa-search"></i> Go..
-					</button>
-					<button class="btn clear-btn">
-						<i class="fa fa-trash-o"></i> Clear
-					</button>
-				</div>
-			</div>
-		</div>
-
-	</div> -->
 	<!-- //banner -->
 
 
-	<!-- top-brands -->
-	<div class="top-brands">
+	<!-- top-coupons -->
+	<div class="top-brands" id="topcoupons">
 		<div class="container">
-			<h3>Top Brands</h3>
+			<h3>Top Coupons</h3>
 			<div class="brands-cont">
 
-				<div class="col-md-3 text-center">
+				<div th:if="${couponscount}">
+					<h1 align="center">Coupons Not Available Now</h1>
+				</div>
+
+				<div class="col-md-3 text-center"
+					data-th-each="cat : ${couponsList}">
 					<div class="brands">
-						<img src="images/brand-01.png" alt="01" />
-						<div class="coup-tit">Hp Coupons</div>
+						<img src="img/off.png" width="200px" alt="01" />
+						<div>&nbsp;</div>
+						<div class="coup-tit">Surya Restaurent</div>
+						<div class="coup-tit" th:text="${cat.coupon}"></div>
 						<button class="btn  btn-block btn-view">View</button>
 					</div>
 				</div>
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-02.png" alt="01" />
-						<div class="coup-tit">Lifestyle</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-03.png" alt="01" />
-						<div class="coup-tit">Yoga style</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-05.png" alt="01" />
-						<div class="coup-tit">LG</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-05.png" alt="01" />
-						<div class="coup-tit">Pizza hut</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-06.png" alt="01" />
-						<div class="coup-tit">Cisco</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-07.png" alt="01" />
-						<div class="coup-tit">at and t</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-				<div class="col-md-3 text-center">
-					<div class="brands">
-						<img src="images/brand-08.png" alt="01" />
-						<div class="coup-tit">UKIP</div>
-						<button class="btn  btn-block btn-view">View</button>
-					</div>
-				</div>
-
-
 
 			</div>
 
@@ -367,7 +281,7 @@
 
 
 	<!-- special-deals -->
-	<div class="special-deals">
+	<div class="special-deals" id="popularstores">
 		<div class="container">
 			<h2>Popular Stores</h2>
 			<div class="w3agile_special_deals_grids">
@@ -376,12 +290,12 @@
 						<img src="images/21.jpg" alt=" " class="img-responsive" />
 						<div class="w3agile_special_deals_grid_left_grid_pos1">
 							<h5>
-								40%<span>Off/-</span>
+								10%<span>Off/- SBI CARD</span>
 							</h5>
 						</div>
 						<div class="w3agile_special_deals_grid_left_grid_pos">
 							<h4>
-								We Offer <span>Best Products</span>
+								Surya <span>Summer Sale</span>
 							</h4>
 						</div>
 					</div>
@@ -395,7 +309,7 @@
 						</div>
 						<div class="w3agile_special_deals_grid_left_grid_pos">
 							<h4>
-								We Offer <span>Best Products</span>
+								Surya <span>Best Products</span>
 							</h4>
 						</div>
 					</div>
@@ -417,7 +331,7 @@
 	</div>
 	<!-- //special-deals -->
 	<!-- about us -->
-	<div class="new-products">
+	<div class="new-products" id="aboutus">
 		<div class="container">
 			<h3>About Us</h3>
 
@@ -438,21 +352,15 @@
 	<!-- about us -->
 
 	<!-- top-brands -->
-	<div class="top-brands">
+	<!-- <div class="top-brands">
 		<div class="container">
 			<h3>Popular Stores</h3>
 			<div class="sliderfig">
+			
 				<ul id="flexiselDemo1">
-					<li><img src="images/tb1.jpg" alt=" " class="img-responsive" />
-					</li>
-					<li><img src="images/tb2.jpg" alt=" " class="img-responsive" />
-					</li>
-					<li><img src="images/tb3.jpg" alt=" " class="img-responsive" />
-					</li>
-					<li><img src="images/tb4.jpg" alt=" " class="img-responsive" />
-					</li>
-					<li><img src="images/tb5.jpg" alt=" " class="img-responsive" />
-					</li>
+					<li data-th-each="cat : ${couponsList}"><img
+						src="img/logo.jpg" alt=" " class="img-responsive" />
+						<h1>STORE</h1></li>
 				</ul>
 			</div>
 
@@ -487,7 +395,7 @@
 			<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 
 		</div>
-	</div>
+	</div> -->
 	<!-- //top-brands -->
 
 	<!-- newsletter -->
@@ -508,7 +416,7 @@
 	</div>
 	<!-- //newsletter -->
 	<!-- footer -->
-	<div class="footer">
+	<div class="footer" id="contactus">
 		<div class="container">
 			<div class="w3_footer_grids">
 				<div class="col-md-3 w3_footer_grid">
@@ -575,5 +483,4 @@
 
 	<script th:src="@{/js/minicart.js}"></script>
 </body>
-
 </html>
