--- a/GiftCards/src/main/resources/templates/pages/coupons.html
+++ b/GiftCards/src/main/resources/templates/pages/coupons.html
@@ -31,7 +31,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="cat : ${statesList}"
-									th:text="${cat.cc_state_id}" />
+									th:text="${cat.cc_state_name}" />
 							</select>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="cat : ${locationsList}"
-									th:text="${cat.locationname}" />
+									th:text="${cat.cc_loc_name}" />
 							</select>
 						</div>
 					</div>
@@ -69,7 +69,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="cat : ${categoriesList}"
-									th:text="${cat.categoriename}" />
+									th:text="${cat.cc_catg_name}" />
 							</select>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="cat : ${subcategoriesList}"
-									th:text="${cat.subcategoryname}" />
+									th:text="${cat.cc_subcat_name}" />
 							</select>
 						</div>
 					</div>
@@ -102,9 +102,9 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Name </label>
 						<div class="col-sm-8">
-							<input type="text" class="form-control" name="cc_coupon_name"
-								id="cc_coupon_name" required="required"
-								th:value="${coupons.cc_coupon_name}" />
+							<input type="text" class="form-control" name="coupon"
+								id="coupon" required="required"
+								th:value="${coupons.coupon}" />
 						</div>
 					</div>
 
@@ -144,8 +144,8 @@
 
 				<tbody>
 					<tr data-th-each="subcat : ${couponsList}">
-						<td th:text="${subcat.id}"></td>
-						<td th:text="${subcat.cc_coupon_name}"></td>
+						<td th:text="${subcat.cc_coupon_id}"></td>
+						<td th:text="${subcat.coupon}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
 					</tr>
