--- a/GiftCards/src/main/resources/templates/pages/subcategories.html
+++ b/GiftCards/src/main/resources/templates/pages/subcategories.html
@@ -18,7 +18,7 @@
 						<div class="col-sm-8">
 							<select class="form-control">
 								<option data-th-each="cat : ${categoriesList}"
-									th:text="${cat.categoriename}" />
+									th:text="${cat.cc_catg_name}" />
 							</select>
 						</div>
 					</div>
@@ -28,9 +28,9 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Name </label>
 						<div class="col-sm-8">
-							<input type="text" class="form-control" name="subcategoryname"
-								id="subcategoryname" required="required"
-								th:value="${subcategoriess.subcategoryname}" />
+							<input type="text" class="form-control" name="cc_subcat_name"
+								id="cc_subcat_name" required="required"
+								th:value="${subcategoriess.cc_subcat_name}" />
 						</div>
 					</div>
 
@@ -70,8 +70,8 @@
 
 				<tbody>
 					<tr data-th-each="subcat : ${subcategoriesList}">
-						<td th:text="${subcat.id}"></td>
-						<td th:text="${subcat.subcategoryname}"></td>
+						<td th:text="${subcat.cc_subcat_id}"></td>
+						<td th:text="${subcat.cc_subcat_name}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
 					</tr>
