--- a/GiftCards/src/main/resources/templates/homepage.html
+++ b/GiftCards/src/main/resources/templates/homepage.html
@@ -55,9 +55,9 @@
 	<!-- header -->
 	<div class="header" id="home1">
 		<div class="container">
-			<div class="pull-left">
-
-				<img src="img/logo.jpg" width="250" class=" img-responsive"
+			<div class="pull-left col-sm-6">
+				<div class="mob-logo des-mod">
+				<img src="img/logo.jpg" width="100%" class=" img-responsive"
 					alt="Logo" />
 
 
@@ -65,9 +65,10 @@
 					<a href="#">Cool coupons<span>Your stores. Your
 							place.</span></a>
 				</h1> -->
+				</div>
 			</div>
 
-			<div class="pull-right">
+			<div class="pull-right col-sm-6">
 				<div>
 					<small><i class="fa fa-map-marker location-icon"></i> India</small>
 
@@ -90,6 +91,7 @@
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
+				<!-- <div class="pull-right mob-link">kk</div> -->
 				<div class="navbar-header nav_2">
 					<button type="button"
 						class="navbar-toggle collapsed navbar-toggle1"
@@ -99,7 +101,9 @@
 							class="icon-bar"></span>
 					</button>
 				</div>
+				
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
+					
 					<ul class="nav navbar-nav">
 						<li><a href="#" class="act">Home</a></li>
 						<li><a href="#topcoupons" class="scroll">Top Coupons</a></li>
@@ -165,10 +169,10 @@
 				<div>
 					<form action="#" method="post" novalidate="novalidate">
 						<div class="row">
-							<div class="col-lg-12">
+							<div class="">
 								<div class="row">
 
-									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
 										<select class="form-control search-slt"
 											id="exampleFormControlSelect1">
 											<option>Select Location</option>
@@ -179,7 +183,7 @@
 
 
 
-									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
 										<select class="form-control search-slt"
 											id="exampleFormControlSelect1">
 											<option>Select Categry</option>
@@ -188,7 +192,7 @@
 										</select>
 									</div>
 
-									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
 										<select class="form-control search-slt"
 											id="exampleFormControlSelect1">
 											<option>Select Sub Categry</option>
@@ -198,7 +202,7 @@
 									</div>
 
 
-									<div class="col-lg-3 col-md-3 col-sm-12 p-0">
+									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
 										<button type="button" class="btn btn-danger wrn-btn"
 											onclick="#">Search</button>
 									</div>
