--- a/GiftCards/src/main/resources/templates/homepage.html
+++ b/GiftCards/src/main/resources/templates/homepage.html
@@ -53,35 +53,36 @@
 
 
 	<!-- header -->
-	<!-- <div class="header" id="home1">
-		<div class="container">
+	<div class="header">
+		<div class="">
 			<div class="pull-left col-sm-6">
 				<div class="mob-logo des-mod">
-				<img src="img/logo.jpg" width="100%" class=" img-responsive"
-					alt="Logo" />
-
-
-				<h1>
-					<a href="#">Cool coupons<span>Your stores. Your
-							place.</span></a>
-				</h1>
+					<img src="img/logo.jpg" width="100%" class=" img-responsive"
+						alt="Logo" />
 				</div>
 			</div>
 
 			<div class="pull-right col-sm-6">
 				<div>
+					<div>&nbsp;</div>
 					<small><i class="fa fa-map-marker location-icon"></i> India</small>
 
 					<select class="form-control search-slt">
+						<option data-th-each="cat : ${citiesList}"
+							th:text="${cat.cc_city_name}" />
+					</select>
+
+					<!-- <select class="form-control search-slt">
 						<option data-th-each="cat : ${statesList}"
 							th:text="${cat.cc_state_name}" />
-					</select>
+					</select> -->
+
 
 				</div>
 			</div>
-
+			<div>&nbsp;</div>
 		</div>
-	</div> -->
+	</div>
 
 	<!-- header close -->
 
@@ -105,10 +106,11 @@
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 
 					<ul class="nav navbar-nav">
-						<li><a href="#" class="act">Home</a></li>
-						<li><a href="#topcoupons" class="scroll">Top Coupons</a></li>
-						<li><a href="#popularstores" class="scroll">Popular
-								Stores</a></li>
+						<!-- <li><a href="#" class="act">Home</a></li> -->
+						<li><a href="#topcoupons" class="scroll">Online
+								Advertising</a></li>
+						<li><a href="#popularstores" class="scroll">Coupon Book
+								Advertising</a></li>
 						<li><a href="#aboutus" class="scroll">About Us</a></li>
 						<!-- <li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown">Stores <b class="caret"></b></a>
@@ -153,6 +155,9 @@
 								</div>
 							</ul></li> -->
 
+						<!-- <li><a href="#tnc" class="scroll">Terms and Conditions</a></li> -->
+						<li><a href="#feedback" class="scroll">Feed Back</a></li>
+						<li><a href="#faq" class="scroll">Faq</a></li>
 						<li><a href="#contactus" class="scroll">Contact Us</a></li>
 					</ul>
 				</div>
@@ -161,9 +166,50 @@
 	</div>
 	<!-- nav bar close -->
 
+	<div>&nbsp;</div>
+	<div class="container">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>
+
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+				<div class="item active">
+					<img src="images/sliderone.jpg" alt="New York" />
+				</div>
+
+				<div class="item">
+					<img src="images/sliderone.jpg" alt="New York" />
+				</div>
+
+				<div class="item">
+					<img src="images/sliderone.jpg" alt="New York" />
+				</div>
+
+
+			</div>
+
+			<!-- Left and right controls -->
+			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span> <span
+				class="sr-only">Previous</span>
+			</a> <a class="right carousel-control" href="#myCarousel"
+				data-slide="next"> <span
+				class="glyphicon glyphicon-chevron-right"></span> <span
+				class="sr-only">Next</span>
+			</a>
+		</div>
+
+	</div>
+
 	<!-- <div>&nbsp;</div> -->
 	<!-- banner -->
-	<div class="">
+	<!-- <div class="">
 		<div>
 			<section>
 
@@ -173,7 +219,7 @@
 							<div class="input-field first-wrap">
 								<select class="form-control search-slt"
 									id="exampleFormControlSelect1">
-									<option>Select Location</option>
+									<option>Select City</option>
 									<option data-th-each="cat : ${citiesList}"
 										th:text="${cat.cc_city_name}" />
 								</select>
@@ -200,12 +246,12 @@
 							<div class="input-field first-wrap">
 								<span><a href="#topcoupons"
 									class="btn btn-danger wrn-btn scroll">Search</a></span>
-								<!-- 
+								
 								<div>&nbsp;</div>
-								<a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a> -->
+								<a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a>
 
-								<!-- <button type="button" class="btn btn-danger wrn-btn"
-									onclick="#topcoupons"><span><a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a></span></button> -->
+								<button type="button" class="btn btn-danger wrn-btn"
+									onclick="#topcoupons"><span><a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a></span></button>
 
 							</div>
 
@@ -213,13 +259,13 @@
 
 
 
-							<!-- <div class="input-field third-wrap">
+							<div class="input-field third-wrap">
 								<button class="btn-search" type="button">Search</button>
-							</div> -->
+							</div>
 
 
 
-							<!-- <div class="input-field second-wrap">
+							<div class="input-field second-wrap">
 								<select class="form-control search-slt"
 									id="exampleFormControlSelect1">
 									<option>Select Sub Categry</option>
@@ -231,13 +277,13 @@
 
 							<div class="input-field third-wrap">
 								<button class="btn-search" type="button">Search</button>
-							</div> -->
+							</div>
 						</div>
 					</form>
 				</div>
 
 
-				<!-- <div>
+				<div>
 					<form action="#" method="post" novalidate="novalidate">
 						<div class="row">
 							<div class="">
@@ -281,13 +327,13 @@
 							</div>
 						</div>
 					</form>
-				</div> -->
+				</div>
 			</section>
 
 			<div>&nbsp;</div>
 		</div>
 
-		<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			Indicators
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -321,15 +367,15 @@
 				class="glyphicon glyphicon-chevron-right"></span> <span
 				class="sr-only">Next</span>
 			</a>
-		</div> -->
-	</div>
+		</div>
+	</div> -->
 	<!-- //banner -->
 
 
 	<!-- top-coupons -->
 	<div class="top-brands" id="topcoupons">
 		<div class="container">
-			<h3>Top Coupons</h3>
+			<h3>Online Advertising</h3>
 			<div class="brands-cont">
 
 				<div th:if="${couponscount}">
@@ -339,11 +385,11 @@
 				<div class="col-md-3 text-center"
 					data-th-each="cat : ${couponsList}">
 					<div class="brands">
-						<img src="img/off.png" width="200px" alt="01" />
-						<div>&nbsp;</div>
+						<img src="img/cpns.jpg" width="200px" alt="01" />
+						<!-- <div>&nbsp;</div>
 						<div class="coup-tit">Surya Restaurent</div>
 						<div class="coup-tit" th:text="${cat.coupon}"></div>
-						<button class="btn  btn-block btn-view">View</button>
+						<button class="btn  btn-block btn-view">View</button> -->
 					</div>
 				</div>
 
@@ -354,16 +400,15 @@
 	<!-- //top-brands -->
 
 
-
 	<!-- special-deals -->
 	<div class="special-deals" id="popularstores">
 		<div class="container">
-			<h2>Popular Stores</h2>
+			<h2>Coupon Book Advertising</h2>
 			<div class="w3agile_special_deals_grids">
-				<div class="col-md-7 w3agile_special_deals_grid_left">
+				<div class="col-md-6 w3agile_special_deals_grid_left">
 					<div class="w3agile_special_deals_grid_left_grid">
 						<img src="images/21.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
+						<!-- <div class="w3agile_special_deals_grid_left_grid_pos1">
 							<h5>
 								10%<span>Off/- SBI CARD</span>
 							</h5>
@@ -372,12 +417,12 @@
 							<h4>
 								Surya <span>Summer Sale</span>
 							</h4>
-						</div>
+						</div> -->
 					</div>
 
 					<div class="w3agile_special_deals_grid_left_grid">
 						<img src="images/022.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
+						<!-- <div class="w3agile_special_deals_grid_left_grid_pos1">
 							<h5>
 								20%<span>Off/-</span>
 							</h5>
@@ -386,10 +431,41 @@
 							<h4>
 								Surya <span>Best Products</span>
 							</h4>
-						</div>
+						</div> -->
 					</div>
 				</div>
-				<div class="col-md-5 w3agile_special_deals_grid_right">
+
+				<div class="col-md-6 w3agile_special_deals_grid_left">
+					<div class="w3agile_special_deals_grid_left_grid">
+						<img src="images/21.jpg" alt=" " class="img-responsive" />
+						<!-- <div class="w3agile_special_deals_grid_left_grid_pos1">
+							<h5>
+								10%<span>Off/- SBI CARD</span>
+							</h5>
+						</div>
+						<div class="w3agile_special_deals_grid_left_grid_pos">
+							<h4>
+								Surya <span>Summer Sale</span>
+							</h4>
+						</div> -->
+					</div>
+
+					<div class="w3agile_special_deals_grid_left_grid">
+						<img src="images/022.jpg" alt=" " class="img-responsive" />
+						<!-- <div class="w3agile_special_deals_grid_left_grid_pos1">
+							<h5>
+								20%<span>Off/-</span>
+							</h5>
+						</div>
+						<div class="w3agile_special_deals_grid_left_grid_pos">
+							<h4>
+								Surya <span>Best Products</span>
+							</h4>
+						</div> -->
+					</div>
+				</div>
+
+				<!-- <div class="col-md-5 w3agile_special_deals_grid_right">
 					<img src="images/20.jpg" alt=" " class="img-responsive" />
 					<div class="w3agile_special_deals_grid_right_pos">
 						<h4>
@@ -399,7 +475,7 @@
 							save up <span>to</span> 30%
 						</h5>
 					</div>
-				</div>
+				</div> -->
 				<div class="clearfix"></div>
 			</div>
 		</div>
@@ -505,47 +581,29 @@
 							aria-hidden="true"></i>+1234 567 567</li>
 					</ul>
 				</div>
-				<!-- <div class="col-md-3 w3_footer_grid">
-					<h3>Information</h3>
+				 <div class="col-md-3 w3_footer_grid">
+					<h3>Faq</h3>
 					<ul class="info">
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">Online Advertising</a></li>
+						<li><a href="#">About Printing</a></li>
 						<li><a href="#">FAQ's</a></li>
-						<li><a href="#l">Special Products</a></li>
+						<li><a href="#l">Special Offers</a></li>
 					</ul>
-				</div> -->
-				<!-- <div class="col-md-3 w3_footer_grid">
-					<h3>Category</h3>
+				</div> 
+				 <div class="col-md-3 w3_footer_grid">
+					<h3>Feed back</h3>
 					<ul class="info">
-						<li><a href="#">Category 01</a></li>
-						<li><a href="#">Category 02</a></li>
-						<li><a href="#">Category 03</a></li>
+						<li><a href="#">Printing</a></li>
+						<li><a href="#">Ads</a></li>
+						<li><a href="#">Coupons</a></li>
 
 					</ul>
-				</div> -->
-				<!-- <div class="col-md-3 w3_footer_grid">
-					<h3>Profile</h3>
-					<ul class="info">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Today's Deals</a></li>
-					</ul>
-					<h4>Follow Us</h4>
-					<div class="agileits_social_button">
-						<ul>
-							<li><a href="#" class="facebook"> </a></li>
-							<li><a href="#" class="twitter"> </a></li>
-							<li><a href="#" class="google"> </a></li>
-							<li><a href="#" class="pinterest"> </a></li>
-						</ul>
-					</div>
-				</div> -->
+				</div> 
 				
+
 				<div class="col-md-3 w3_footer_grid">
-					<h3>Profile</h3>
-					<ul class="info">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Today's Deals</a></li>
-					</ul>
+					
+					
 					<h4>Follow Us</h4>
 					<div class="agileits_social_button">
 						<ul>
