--- a/GiftCards/src/main/resources/templates/pages/states.html
+++ b/GiftCards/src/main/resources/templates/pages/states.html
@@ -19,9 +19,9 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Country</label>
 						<div class="col-sm-8">
-							<select class="form-control">
+							<select class="form-control" id="country_id" name="country_id" required="required">
 								<option data-th-each="country : ${countriesList}"
-									th:text="${country.cc_country_name}" />
+									th:text="${country.cc_country_name}" th:value="${country.cc_country_name}" />
 							</select>
 						</div>
 					</div>
