--- a/GiftCards/src/main/resources/static/css/style.css
+++ b/GiftCards/src/main/resources/static/css/style.css
@@ -447,7 +447,7 @@ ul.multi-column-dropdown h6 {
 	z-index: 100;
 }
 .navigation {
-    
+     margin: 0em 0 0;
 	text-align:center;
 	background:#ba1319;
 }
