--- a/GiftCards/src/main/resources/templates/pages/categories.html
+++ b/GiftCards/src/main/resources/templates/pages/categories.html
@@ -7,7 +7,7 @@
 	<div th:fragment="body-categories">
 		<div class="col-sm-6">
 			<div>&nbsp;</div>
-			<form class="form-horizontal" role="form" method="post">
+			<form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
 				<fieldset style="background: #f2f2f2;">
 					<h3 class="leg-te">Add Category</h3>
 					<div>&nbsp;</div>
@@ -21,6 +21,17 @@
 					</div>
 
 					<div>&nbsp;</div>
+					
+					<div class="form-group">
+						<label class="control-label col-sm-3">Name </label>
+						<div class="col-sm-8">
+							<input type="file" class="form-control" name="cc_cat_image" id="cc_cat_image"
+								required="required" th:value="${categoriesS.cc_cat_image}" />
+						</div>
+					</div>
+					
+					<div>&nbsp;</div>
+					
 					<div class="form-group">
 						<label class="control-label col-sm-3"></label>
 						<div class="col-sm-8">
