--- a/GiftCards/src/main/resources/templates/pages/states.html
+++ b/GiftCards/src/main/resources/templates/pages/states.html
@@ -21,7 +21,7 @@
 						<div class="col-sm-8">
 							<select class="form-control" id="country_id" name="country_id" required="required">
 								<option data-th-each="country : ${countriesList}"
-									th:text="${country.cc_country_name}" th:value="${country.cc_country_name}" />
+									th:text="${country.cc_country_name}" th:value="${country.country_id}" />
 							</select>
 						</div>
 					</div>
