--- a/GiftCards/src/main/resources/templates/pages/categories.html
+++ b/GiftCards/src/main/resources/templates/pages/categories.html
@@ -14,19 +14,19 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Name </label>
 						<div class="col-sm-8">
-							<input type="text" class="form-control" name="cc_catg_name"
-								id="cc_catg_name" required="required"
-								th:value="${categoriesS.cc_catg_name}" />
+							<input type="text" class="form-control" name="name"
+								id="name" required="required"
+								th:value="${categoriesS.name}" />
 						</div>
 					</div>
 
 					<div>&nbsp;</div>
 					
 					<div class="form-group">
-						<label class="control-label col-sm-3">Name </label>
+						<label class="control-label col-sm-3">Image </label>
 						<div class="col-sm-8">
-							<input type="file" class="form-control" name="cc_cat_image" id="cc_cat_image"
-								required="required" th:value="${categoriesS.cc_cat_image}" />
+							<input type="file" class="form-control" name="image" id="image"
+								required="required" th:value="${categoriesS.image}" />
 						</div>
 					</div>
 					
@@ -65,8 +65,8 @@
 
 				<tbody>
 					<tr data-th-each="cat : ${categoriesList}">
-						<td th:text="${cat.cc_catg_id}"></td>
-						<td th:text="${cat.cc_catg_name}"></td>
+						<td th:text="${cat.id}"></td>
+						<td th:text="${cat.name}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
 					</tr>
