--- a/GiftCards/src/main/resources/templates/pages/subcategories.html
+++ b/GiftCards/src/main/resources/templates/pages/subcategories.html
@@ -16,9 +16,9 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Category</label>
 						<div class="col-sm-8">
-							<select class="form-control">
+							<select class="form-control" name="categoryId">
 								<option data-th-each="cat : ${categoriesList}"
-									th:text="${cat.cc_catg_name}" />
+									th:text="${cat.name}" th:value="${cat.id}" />
 							</select>
 						</div>
 					</div>
@@ -28,9 +28,9 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3">Name </label>
 						<div class="col-sm-8">
-							<input type="text" class="form-control" name="cc_subcat_name"
-								id="cc_subcat_name" required="required"
-								th:value="${subcategoriess.cc_subcat_name}" />
+							<input type="text" class="form-control" name="subCategoryName"
+								id="name" required="required"
+								th:value="${subcategoriess.subCategoryName}" />
 						</div>
 					</div>
 
@@ -70,8 +70,8 @@
 
 				<tbody>
 					<tr data-th-each="subcat : ${subcategoriesList}">
-						<td th:text="${subcat.cc_subcat_id}"></td>
-						<td th:text="${subcat.cc_subcat_name}"></td>
+						<td th:text="${subcat.id}"></td>
+						<td th:text="${subcat.subCategoryName}"></td>
 						<td><i class="menu-icon fa fa-edit"></i></td>
 						<td><i class="menu-icon fa fa-trash-o"></i></td>
 					</tr>
