--- a/GiftCards/src/main/resources/templates/common/adminheader.html
+++ b/GiftCards/src/main/resources/templates/common/adminheader.html
@@ -37,19 +37,25 @@
 								<li><a th:href="@{/addLocation}">Add Location</a></li>
 							</ul></li>
 						<li><a th:href="@{/addcategory}"><i
-								class="menu-icon fa fa-table"></i>Add Category</a></li>
+								class="menu-icon fa fa-table"></i>Online Ads Category</a></li>
 
 						<li><a th:href="@{/addsubcategory}"><i
-								class="menu-icon fa fa-table"></i>Add SubCategory</a></li>
+								class="menu-icon fa fa-table"></i>Online Ads</a></li>
 
-						<li><a th:href="@{/addstore}"><i
+
+						<li><a th:href="@{/addcoupon}"><i
+								class="menu-icon fa fa-table"></i>Voucher Ads</a></li>
+
+						
+						
+						<!-- 	<li><a th:href="@{/addstore}"><i
 								class="menu-icon fa fa-table"></i>Add Store</a></li>
 
 						<li><a th:href="@{/addbanner}"><i
 								class="menu-icon fa fa-table"></i>Add Banners</a></li>
 
 						<li><a th:href="@{/addcoupon}"><i
-								class="menu-icon fa fa-table"></i>Add Coupons</a></li>
+								class="menu-icon fa fa-table"></i>Add Coupons</a></li> -->
 
 					</ul>
 				</div>
