--- a/GiftCards/src/main/resources/templates/homepage.html
+++ b/GiftCards/src/main/resources/templates/homepage.html
@@ -44,57 +44,41 @@
 </head>
 <body>
 	<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
-	<!-- //for bootstrap working -->
-	<!-- header modal -->
-
 	<script>
 		$('#myModal88').modal('show');
 	</script>
 
-
-
 	<!-- header -->
-	<!-- <div class="header">
-		<div class="">
-			<div class="pull-left col-sm-6">
-				<div class="mob-logo des-mod">
-					<img src="img/logo.jpg" width="100%" class=" img-responsive"
-						alt="Logo" />
-				</div>
+	<div class="header" id="home1">
+		<div class="container hidden-xs mob-640">
+			<div class="w3l_logo pull-left">
+				<!--				<h1><a href="index.html">Coolcoupons<span>Your stores. Your place.</span></a></h1>-->
+				<img src="img/logo.jpg" alt="logo" width="240" />
 			</div>
 
-			<div class="pull-right col-sm-6">
+			<div class="pull-right">
 				<div>
-					<div>&nbsp;</div>
-					<small><i class="fa fa-map-marker location-icon"></i> India</small>
-
-					<select class="form-control search-slt">
-						<option data-th-each="cat : ${citiesList}"
-							th:text="${cat.cc_city_name}" />
+					<small><i class="fa fa-map-marker location-icon"></i> </small> <select
+						class="forms-inps" name="city_id">
+						<option data-th-each="citi : ${citiesList}"
+							th:text="${citi.cc_city_name}" th:value="${citi.cc_city_id}" />
 					</select>
-
-					<select class="form-control search-slt">
-						<option data-th-each="cat : ${statesList}"
-							th:text="${cat.cc_state_name}" />
-					</select>
-
-
 				</div>
 			</div>
-			<div>&nbsp;</div>
+
 		</div>
-	</div> -->
+	</div>
+	<!-- //header -->
 
-	<!-- header close -->
-
-
-	<!-- nav bar start -->
+	<!-- navigation -->
 	<div class="navigation" id="home1">
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<!-- <div class="pull-right mob-link">kk</div> -->
-				<div class="navbar-header nav_2">
+				<div class="m-logo hidden-md hidden-lg ">
+					<img src="images/mlogo.png" width="140" alt="logo" />
+				</div>
+				<div class="navbar-header nav_2 ">
 					<button type="button"
 						class="navbar-toggle collapsed navbar-toggle1"
 						data-toggle="collapse" data-target="#bs-megadropdown-tabs">
@@ -105,67 +89,40 @@
 				</div>
 
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-
 					<ul class="nav navbar-nav">
-						<!-- <li><a href="#" class="act">Home</a></li> -->
 						<li><a href="#topcoupons" class="scroll">Online
 								Advertising</a></li>
 						<li><a href="#popularstores" class="scroll">Coupon Book
 								Advertising</a></li>
 						<li><a href="#aboutus" class="scroll">About Us</a></li>
-						<!-- <li class="dropdown"><a href="#" class="dropdown-toggle"
-							data-toggle="dropdown">Stores <b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Mobiles</h6>
-											<li><a href="#">Mobile Phones</a></li>
-											<li><a href="#">Mp3 Players <span>New</span></a></li>
-											<li><a href="#">Popular Models</a></li>
-											<li><a href="#">All Tablets<span>New</span></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Accessories</h6>
-											<li><a href="#">Laptop</a></li>
-											<li><a href="#">Desktop</a></li>
-											<li><a href="#">Wearables <span>New</span></a></li>
-											<li><a href="#"><i>Summer Store</i></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-2">
-										<ul class="multi-column-dropdown">
-											<h6>Home</h6>
-											<li><a href="#">Tv</a></li>
-											<li><a href="#">Camera</a></li>
-											<li><a href="#">AC</a></li>
-											<li><a href="#">Grinders</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-4">
-										<div class="w3ls_products_pos">
-											<h4>
-												30%<i>Off/-</i>
-											</h4>
-											<img src="images/1.jpg" alt=" " class="img-responsive" />
-										</div>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul></li> -->
-
-						<!-- <li><a href="#tnc" class="scroll">Terms and Conditions</a></li> -->
 						<li><a href="#feedback" class="scroll">Feed Back</a></li>
 						<li><a href="#faq" class="scroll">Faq</a></li>
 						<li><a href="#contactus" class="scroll">Contact Us</a></li>
 					</ul>
 				</div>
+
+				<div class="mobile-search hidden-md hidden-lg ">
+
+					<div class="search-container">
+						<div class="search-box">
+							<ul>
+								<li><i class="fa fa-map-marker location-icon"></i></li>
+								<li class="loc-cont"><select class="search-location"
+									name="city_id">
+										<option data-th-each="citi : ${citiesList}"
+											th:text="${citi.cc_city_name}" th:value="${citi.cc_city_id}" />
+								</select></li>
+							</ul>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+
+				</div>
 			</nav>
 		</div>
 	</div>
-	<!-- nav bar close -->
+	<!-- //navigation -->
+
 
 	<div>&nbsp;</div>
 	<div class="container">
@@ -173,15 +130,11 @@
 
 
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
 			</ol>
-
-			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
 					<img src="images/sliderone.jpg" alt="New York" />
@@ -197,8 +150,6 @@
 
 
 			</div>
-
-			<!-- Left and right controls -->
 			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
 				<span class="glyphicon glyphicon-chevron-left"></span> <span
 				class="sr-only">Previous</span>
@@ -211,187 +162,9 @@
 
 	</div>
 
-	<!-- <div>&nbsp;</div> -->
-	<!-- banner -->
-	<!-- <div class="">
-		<div>
-			<section>
-
-				<div class="s01">
-					<form>
-						<div class="inner-form">
-							<div class="input-field first-wrap">
-								<select class="form-control search-slt"
-									id="exampleFormControlSelect1">
-									<option>Select City</option>
-									<option data-th-each="cat : ${citiesList}"
-										th:text="${cat.cc_city_name}" />
-								</select>
-							</div>
-
-							<div class="input-field first-wrap">
-								<select class="form-control search-slt"
-									id="exampleFormControlSelect1">
-									<option>Select Categry</option>
-									<option data-th-each="cat : ${categoriesList}"
-										th:text="${cat.cc_catg_name}" />
-								</select>
-							</div>
-
-							<div class="input-field first-wrap">
-								<select class="form-control search-slt"
-									id="exampleFormControlSelect1">
-									<option>Select Sub Categry</option>
-									<option data-th-each="cat : ${subcategoriesList}"
-										th:text="${cat.cc_subcat_name}" />
-								</select>
-							</div>
-
-							<div class="input-field first-wrap">
-								<span><a href="#topcoupons"
-									class="btn btn-danger wrn-btn scroll">Search</a></span>
-								
-								<div>&nbsp;</div>
-								<a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a>
-
-								<button type="button" class="btn btn-danger wrn-btn"
-									onclick="#topcoupons"><span><a href="#topcoupons" class="btn btn-danger wrn-btn scroll">Search</a></span></button>
-
-							</div>
-
-
-
-
-
-							<div class="input-field third-wrap">
-								<button class="btn-search" type="button">Search</button>
-							</div>
-
-
-
-							<div class="input-field second-wrap">
-								<select class="form-control search-slt"
-									id="exampleFormControlSelect1">
-									<option>Select Sub Categry</option>
-									<option data-th-each="cat : ${subcategoriesList}"
-										th:text="${cat.cc_subcat_name}" />
-								</select>
-							</div>
-
-
-							<div class="input-field third-wrap">
-								<button class="btn-search" type="button">Search</button>
-							</div>
-						</div>
-					</form>
-				</div>
-
-
-				<div>
-					<form action="#" method="post" novalidate="novalidate">
-						<div class="row">
-							<div class="">
-								<div class="row">
-
-									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
-										<select class="form-control search-slt"
-											id="exampleFormControlSelect1">
-											<option>Select Location</option>
-											<option data-th-each="cat : ${citiesList}"
-												th:text="${cat.cc_city_name}" />
-										</select>
-									</div>
-
-
-
-									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
-										<select class="form-control search-slt"
-											id="exampleFormControlSelect1">
-											<option>Select Categry</option>
-											<option data-th-each="cat : ${categoriesList}"
-												th:text="${cat.cc_catg_name}" />
-										</select>
-									</div>
-
-									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
-										<select class="form-control search-slt"
-											id="exampleFormControlSelect1">
-											<option>Select Sub Categry</option>
-											<option data-th-each="cat : ${subcategoriesList}"
-												th:text="${cat.cc_subcat_name}" />
-										</select>
-									</div>
-
-
-									<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 p-0 xs-nopad">
-										<button type="button" class="btn btn-danger wrn-btn"
-											onclick="#">Search</button>
-									</div>
-								</div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</section>
-
-			<div>&nbsp;</div>
-		</div>
-
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			Indicators
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-
-			Wrapper for slides
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="images/sliderone.jpg" alt="New York" />
-				</div>
-
-				<div class="item">
-					<img src="images/sliderone.jpg" alt="New York" />
-				</div>
-
-				<div class="item">
-					<img src="images/sliderone.jpg" alt="New York" />
-				</div>
-
-
-			</div>
-
-			Left and right controls
-			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="right carousel-control" href="#myCarousel"
-				data-slide="next"> <span
-				class="glyphicon glyphicon-chevron-right"></span> <span
-				class="sr-only">Next</span>
-			</a>
-		</div>
-	</div> -->
-	<!-- //banner -->
-
-
 	<!-- Online-coupons -->
 	<div class="top-brands" id="topcoupons">
 		<div class="container">
-
-			<div class="header">
-				<div class="form-group">
-					<label class="control-label col-sm-3">City</label>
-					<div class="col-sm-8">
-						<select class="form-control">
-							<option data-th-each="citi : ${citiesList}"
-								th:text="${citi.cc_city_name}" />
-						</select>
-					</div>
-				</div>
-			</div>
-
 			<div>&nbsp;</div>
 			<div>&nbsp;</div>
 
@@ -407,11 +180,14 @@
 					<div class="brands" onclick="@{/admin}">
 						<img th:src="@{'image/uploads/categories/' + ${cat.imagePath}}"
 							width="200px" alt="01" />
+
+						<!-- <img
+							th:src="${pic} == null ? _ : @{'data:image/png;base64,'+${pic}}"
+							width="200px" alt="01" /> -->
+
 						<div class="coup-tit">
 							<a th:href="@{'/products/'+${cat.id}}" th:text="${cat.name}"></a>
 						</div>
-
-
 						<!-- <div>&nbsp;</div>
 						<div class="coup-tit">Surya Restaurent</div>
 						<div class="coup-tit" th:text="${cat.coupon}"></div>
@@ -425,130 +201,40 @@
 	</div>
 	<!-- //online-brands -->
 
-
-
-
-
-
-	<!-- book-coupons -->
-	<!-- <div class="top-brands" id="topcoupons">
+	<!-- Book-coupons -->
+	<div class="top-brands" id="topcoupons">
 		<div class="container">
-			<h3>Book Ads</h3>
+			<div>&nbsp;</div>
+			<div>&nbsp;</div>
+
+			<h3>Voucher Ads</h3>
 			<div class="brands-cont">
 
 				<div th:if="${couponscount}">
-					<h1 align="center">Coupons Not Available Now</h1>
+					<h1 align="center">Ads Not Available Now</h1>
 				</div>
 
 				<div class="col-md-3 text-center"
-					data-th-each="cat : ${categoriesList}">
+					data-th-each="cat : ${couponsList}">
 					<div class="brands" onclick="@{/admin}">
 						<img
-							th:src="@{'image/uploads/categories/' + ${cat.cc_cat_imagepath}}"
+							th:src="@{'image/uploads/coupons/' + ${cat.cc_coupon_imagepath}}"
 							width="200px" alt="01" />
 						<div class="coup-tit">
-							<a th:href="@{/products}" th:text="${cat.cc_catg_name}"></a>
+							<a th:text="${cat.coupon}"></a>
 						</div>
 
-
-						<div>&nbsp;</div>
-						<div class="coup-tit">Surya Restaurent</div>
-						<div class="coup-tit" th:text="${cat.coupon}"></div>
-						<button class="btn  btn-block btn-view">View</button>
 					</div>
 				</div>
 
 			</div>
 
 		</div>
-	</div> -->
-	<!-- //book-brands -->
+	</div>
+	<!-- //Books-ads -->
 
 
 
-
-
-	<!-- special-deals -->
-	<!-- <div class="special-deals" id="popularstores">
-		<div class="container">
-			<h2>Coupon Book Advertising</h2>
-			<div class="w3agile_special_deals_grids">
-				<div class="col-md-6 w3agile_special_deals_grid_left">
-					<div class="w3agile_special_deals_grid_left_grid">
-						<img src="images/21.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
-							<h5>
-								10%<span>Off/- SBI CARD</span>
-							</h5>
-						</div>
-						<div class="w3agile_special_deals_grid_left_grid_pos">
-							<h4>
-								Surya <span>Summer Sale</span>
-							</h4>
-						</div>
-					</div>
-
-					<div class="w3agile_special_deals_grid_left_grid">
-						<img src="images/022.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
-							<h5>
-								20%<span>Off/-</span>
-							</h5>
-						</div>
-						<div class="w3agile_special_deals_grid_left_grid_pos">
-							<h4>
-								Surya <span>Best Products</span>
-							</h4>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 w3agile_special_deals_grid_left">
-					<div class="w3agile_special_deals_grid_left_grid">
-						<img src="images/21.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
-							<h5>
-								10%<span>Off/- SBI CARD</span>
-							</h5>
-						</div>
-						<div class="w3agile_special_deals_grid_left_grid_pos">
-							<h4>
-								Surya <span>Summer Sale</span>
-							</h4>
-						</div>
-					</div>
-
-					<div class="w3agile_special_deals_grid_left_grid">
-						<img src="images/022.jpg" alt=" " class="img-responsive" />
-						<div class="w3agile_special_deals_grid_left_grid_pos1">
-							<h5>
-								20%<span>Off/-</span>
-							</h5>
-						</div>
-						<div class="w3agile_special_deals_grid_left_grid_pos">
-							<h4>
-								Surya <span>Best Products</span>
-							</h4>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-5 w3agile_special_deals_grid_right">
-					<img src="images/20.jpg" alt=" " class="img-responsive" />
-					<div class="w3agile_special_deals_grid_right_pos">
-						<h4>
-							Women's <span>Special</span>
-						</h4>
-						<h5>
-							save up <span>to</span> 30%
-						</h5>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div> -->
-	<!-- //special-deals -->
 	<!-- about us -->
 	<div class="new-products" id="aboutus">
 		<div class="container">
@@ -568,54 +254,7 @@
 				available. Check this page regularly for savings opportunities.</p>
 		</div>
 	</div>
-	<!-- about us -->
-
-	<!-- top-brands -->
-	<!-- <div class="top-brands">
-		<div class="container">
-			<h3>Popular Stores</h3>
-			<div class="sliderfig">
-			
-				<ul id="flexiselDemo1">
-					<li data-th-each="cat : ${couponsList}"><img
-						src="img/logo.jpg" alt=" " class="img-responsive" />
-						<h1>STORE</h1></li>
-				</ul>
-			</div>
-
-			<script type="text/javascript">
-				$(window).load(function() {
-					$("#flexiselDemo1").flexisel({
-						visibleItems : 4,
-						animationSpeed : 1000,
-						autoPlay : true,
-						autoPlaySpeed : 3000,
-						pauseOnHover : true,
-						enableResponsiveBreakpoints : true,
-						responsiveBreakpoints : {
-							portrait : {
-								changePoint : 480,
-								visibleItems : 1
-							},
-							landscape : {
-								changePoint : 640,
-								visibleItems : 2
-							},
-							tablet : {
-								changePoint : 768,
-								visibleItems : 3
-							}
-						}
-					});
-
-				});
-			</script>
-
-			<script type="text/javascript" src="js/jquery.flexisel.js"></script>
-
-		</div>
-	</div> -->
-	<!-- //top-brands -->
+	<!-- end about us -->
 
 	<!-- newsletter -->
 	<div class="newsletter">
