--- a/GiftCards/src/main/resources/templates/pages/categories.html
+++ b/GiftCards/src/main/resources/templates/pages/categories.html
@@ -7,31 +7,45 @@
 	<div th:fragment="body-categories">
 		<div class="col-sm-6">
 			<div>&nbsp;</div>
-			<form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
+			<form class="form-horizontal" role="form" method="post"
+				enctype="multipart/form-data">
 				<fieldset style="background: #f2f2f2;">
-					<h3 class="leg-te">Add Category</h3>
+					<h3 class="leg-te">Add Online Ad Category</h3>
+
+					<div>&nbsp;</div>
+
+					<div class="form-group">
+						<label class="control-label col-sm-3">Select City</label>
+						<div class="col-sm-8">
+							<select class="form-control" name="city_id">
+								<option data-th-each="citi : ${citiesList}"
+									th:text="${citi.cc_city_name}"  th:value="${citi.cc_city_id}"/>
+							</select>
+						</div>
+					</div>
+
+
 					<div>&nbsp;</div>
 					<div class="form-group">
-						<label class="control-label col-sm-3">Name </label>
+						<label class="control-label col-sm-3">Enter Title</label>
 						<div class="col-sm-8">
-							<input type="text" class="form-control" name="name"
-								id="name" required="required"
-								th:value="${categoriesS.name}" />
+							<input type="text" class="form-control" name="name" id="name"
+								required="required" th:value="${categoriesS.name}" />
 						</div>
 					</div>
 
 					<div>&nbsp;</div>
-					
+
 					<div class="form-group">
-						<label class="control-label col-sm-3">Image </label>
+						<label class="control-label col-sm-3">Upload Image </label>
 						<div class="col-sm-8">
 							<input type="file" class="form-control" name="image" id="image"
 								required="required" th:value="${categoriesS.image}" />
 						</div>
 					</div>
-					
+
 					<div>&nbsp;</div>
-					
+
 					<div class="form-group">
 						<label class="control-label col-sm-3"></label>
 						<div class="col-sm-8">
@@ -57,7 +71,7 @@
 				<thead>
 					<tr>
 						<th>S.NO.</th>
-						<th>Brand Name</th>
+						<th>Title</th>
 						<th>Edit</th>
 						<th>Delete</th>
 					</tr>
