--- a/GiftCards/src/main/resources/templates/pages/subcategories.html
+++ b/GiftCards/src/main/resources/templates/pages/subcategories.html
@@ -7,14 +7,14 @@
 	<div th:fragment="body-subcategories">
 		<div class="col-sm-5">
 			<div>&nbsp;</div>
-			<form class="form-horizontal" role="form" method="post">
+			<form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
 				<fieldset style="background: #f2f2f2;">
-					<h3 class="leg-te">Add Sub Category</h3>
+					<h3 class="leg-te">New Ads</h3>
 
 					<div>&nbsp;</div>
 
 					<div class="form-group">
-						<label class="control-label col-sm-3">Category</label>
+						<label class="control-label col-sm-3">Select Ad Category</label>
 						<div class="col-sm-8">
 							<select class="form-control" name="categoryId">
 								<option data-th-each="cat : ${categoriesList}"
@@ -26,13 +26,23 @@
 					<div>&nbsp;</div>
 
 					<div class="form-group">
-						<label class="control-label col-sm-3">Name </label>
+						<label class="control-label col-sm-3">Enter Name </label>
 						<div class="col-sm-8">
 							<input type="text" class="form-control" name="subCategoryName"
 								id="name" required="required"
 								th:value="${subcategoriess.subCategoryName}" />
 						</div>
 					</div>
+					<div>&nbsp;</div>
+					<div class="form-group">
+						<label class="control-label col-sm-3">Upload Image </label>
+						<div class="col-sm-8">
+							<input type="file" class="form-control" name="image" id="image"
+								required="required" th:value="${subcategoriess.image}" />
+						</div>
+					</div>
+
+
 
 					<div>&nbsp;</div>
 
@@ -62,7 +72,7 @@
 				<thead>
 					<tr>
 						<th>S.NO.</th>
-						<th>Name</th>
+						<th>Title</th>
 						<th>Edit</th>
 						<th>Delete</th>
 					</tr>
